# ml-auto-solutions

./: .gitignore  .pre-commit-config.yaml  README.md  auto-push.cloudbuild.yml  pipeline:auto-push.cloudbuild.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dev-requirements.txt  requirements.txt
.github/workflows/: dag-check.yml  pre-commit.yml  pyink-check.yml  pylint-check.yml  require-checklist.yml  unit-test.yml  upload-docker-images.yml
apis/: gcp_config.py  task.py  test_config.py
configs/: composer_env.py  gcs_bucket.py  test_owner.py  vm_resource.py
configs/cluster/: v5e_cluster_config
configs/example/: gke_example_config.py  xpk.Dockerfile  xpk_example_config.py
configs/jsonnet/: flax.latest-bart-wiki.summary-conv-v3-32-1vm  flax.latest-bart-wiki.summary-conv-v4-32-1vm  flax.latest-bart-wiki.summary-func-v2-8-1vm  flax.latest-bart-wiki.summary-func-v3-8-1vm  (+241 more)
dags/: composer_env.py  gcs_bucket.py  msingh_vm_resource.py  quarantined_tests.py  test_owner.py  vm_resource.py
deployment/: .terraform.lock.hcl  README.md  artifact_registry.tf  cloud_composer.auto.tfvars  cloud_composer_template.tf  clusters.tf  provider.tf
docs/: contributing.md
internal_deployment/: .terraform.lock.hcl  composer_env.tf  variables.tf
pipeline/: auto-push.cloudbuild.yml
plugins/: README.md  allow_list.txt  config.json  on_failure_actions.py
scripts/: code-style.sh  dag-check.sh  format-codes.sh  local-airflow.sh  semgrep-rules.yaml  upload-gcs-recipes.sh  upload-tests.sh
utils/: bigquery_test.py  metric.py  metric_test.py  tpu.py
(+509 files in other folders)
